# kata-aws-imgproc-pipeline

./: .gitignore  COSTS.md  KATA.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: Dockerfile  main.py  pyproject.toml
docs/: architecture.md  terraform-modules.md
lambdas/ingest/: handler.py
lambdas/search/: handler.py
scripts/: generate_solution_docs.py
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/frontend/: main.tf  outputs.tf  variables.tf
terraform/modules/ingestion/: main.tf  outputs.tf  variables.tf
terraform/modules/search/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: test_handlers.py
